...
    </LinearLayout>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="add a debt"
        android:id="@+id/btn_newDebt"
        android:layout_gravity="center_horizontal" />

</LinearLayout>

