<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    
    <item android:title="Your Profil">
        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/nav_debtList"
                    android:icon="@drawable/ic_menu_share"
                    android:title="Debt List" />
                <item
                    android:id="@+id/nav_claimList"
                    android:icon="@drawable/ic_menu_share"
                    android:title="Claim List" />
                <item
                    android:id="@+id/nav_logout"
                    android:title="Logout"
                    android:icon="@drawable/ic_menu_share"/>
            </group>
        </menu>
    </item>
</menu>
